Update name, put server everywhere

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ pkg_search_module(UUID REQUIRED uuid)
 
 add_executable(MCServer main.cpp network/Connection.cpp
         network/Connection.hpp server/world/Location.cpp server/world/Location.hpp
-        network/Service.cpp
-        network/Service.hpp protocol/in/PacketInBase.hpp protocol/in/PacketInHandshake.cpp
+        network/NetworkService.cpp
+        network/NetworkService.hpp protocol/in/PacketInBase.hpp protocol/in/PacketInHandshake.cpp
         protocol/in/PacketInHandshake.hpp
         protocol/in/PacketInBase.cpp protocol/ConnectionState.cpp protocol/ConnectionState.hpp logging/Level.cpp
         logging/Level.h logging/Logger.cpp logging/Logger.h protocol/in/PacketInStatusPing.cpp
